--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
+    <div class="start">
+      <span>Start Game</span>
+    </div>
     <div class="memory">
       <header>
         <div class="name"><p>Hello: Ahmed Kechicheb</p></div>
-        <div class="score"><p>Wrong Tries: 0 </p></div>
+        <div class="score"><p>Wrong Tries: 0</p></div>
       </header>
       <section>
         <div class="box" data-card="angular">
