Show  You win if game over

--- a/index.html
+++ b/index.html
@@ -7,12 +7,18 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <div class="start">
-      <span>Start Game</span>
+    <div class="start" id="start">
+      <div class="content">
+        <div class="win">
+          <h1>You Win</h1>
+          <h2>Tries:15</h2>
+        </div>
+        <span>Start Game</span>
+      </div>
     </div>
     <div class="memory">
       <header>
-        <div class="name"><p>Hello: Ahmed Kechicheb</p></div>
+        <div class="name"><p>Hello: Unknown</p></div>
         <div class="score"><p>Wrong Tries: 0</p></div>
       </header>
       <section>
