--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
         </div>
       </section>
     </div>
-
     <audio id="success" src="audio/success.m4a" preload="auto"></audio>
     <audio id="fail" src="audio/fail.mp3" preload="auto"></audio>
+    <audio id="win" src="audio/win.m4a" preload="auto"></audio>
     <script src="main.js"></script>
   </body>
 </html>
